@@ -225,8 +225,7 @@ public class ServicesExample {
 					for (Double l : SIZE) {
 						if (l == 0.0)
 							continue;
-						returnList.addAll(all.stream()
-								.filter(m -> !returnListObjList.contains(m.get_id()))
+						returnList.addAll(all.stream().filter(m -> !returnListObjList.contains(m.get_id()))
 								.filter(m -> m.getCypto().trim().equalsIgnoreCase(i.trim()))
 								.filter(m -> m.getExchange().trim().equalsIgnoreCase(j.trim()))
 								.filter(m -> m.getCurrency().trim().equalsIgnoreCase(k.trim()))
@@ -234,7 +233,7 @@ public class ServicesExample {
 								.filter(m -> Double.valueOf(m.size) >= SIZE.get(temp))
 								.sorted(Comparator.comparing(ExchangeDataRecieved::getTimestamp1).reversed()).limit(100)
 								.toList());
-						returnListObjList = returnList.stream().map(ExchangeDataRecieved::get_id).toList();
+						returnListObjList = returnList.stream().map(ExchangeDataRecieved::get_id).collect(Collectors.toList());
 					}
 		}
 
@@ -253,31 +252,31 @@ public class ServicesExample {
 			currentDB = currentDB.stream().filter(i -> cypto != null && i.getCypto().equalsIgnoreCase(cypto))
 					.filter(i -> currency != null && i.getCurrency().equalsIgnoreCase(currency))
 					.filter(i -> i.getCurrency().equalsIgnoreCase(currency.trim()))
-					.filter(i -> exchange != null && i.getExchange().trim().equalsIgnoreCase(exchange)).toList();
+					.filter(i -> exchange != null && i.getExchange().trim().equalsIgnoreCase(exchange)).collect(Collectors.toList());
 		else
-			currentDB = currentDB.stream()
-					.filter(i -> cypto != null && i.getCypto().equalsIgnoreCase(cypto))
+			currentDB = currentDB.stream().filter(i -> cypto != null && i.getCypto().equalsIgnoreCase(cypto))
 					.filter(i -> currency != null && i.getCurrency().equalsIgnoreCase(currency))
-					.filter(i -> i.getCurrency().equalsIgnoreCase(currency)).toList();
+					.filter(i -> i.getCurrency().equalsIgnoreCase(currency)).collect(Collectors.toList());
 
 		// Checks for tranactions that happened less then 1 min ago
 		List<ExchangeDataRecieved> previousMinList = currentDB.stream()
 				.filter(i -> Duration
 						.between(LocalDateTime.ofInstant(Instant.parse(i.getTimestamp()), ZoneOffset.UTC),
 								LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC).minus(1, ChronoUnit.MINUTES))
-						.toSeconds() <= 60).toList();
+						.toSeconds() < 60)
+				.collect(Collectors.toList());
 
 		// Checks for tranactions that happened less then 60 seconds and 120 seconds ago
 		List<ExchangeDataRecieved> afterMinList = currentDB.stream()
 				.filter(i -> Duration
 						.between(LocalDateTime.ofInstant(Instant.parse(i.getTimestamp()), ZoneOffset.UTC),
 								LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC).minus(1, ChronoUnit.MINUTES))
-						.toSeconds() >= 60)
+						.toSeconds() > 60)
 				.filter(i -> Duration
 						.between(LocalDateTime.ofInstant(Instant.parse(i.getTimestamp()), ZoneOffset.UTC),
 								LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC).minus(1, ChronoUnit.MINUTES))
-						.toSeconds() <= 120)
-				.toList();
+						.toSeconds() < 120)
+				.collect(Collectors.toList());
 
 		double cuurentMinPrice = previousMinList.stream().mapToDouble(i -> Double.parseDouble(i.getPrice())).sum()
 				/ previousMinList.size();
